feat: ✨ 1.21.4 port 🎉